include/digitor/digitor.h

typedef enum DigitorResult {
    DIGITOR_RESULT_OK = 0,
    DIGITOR_RESULT_INVALID_ARGUMENT = 1,
    DIGITOR_RESULT_NOT_INITIALIZED = 2,
    DIGITOR_RESULT_ALREADY_INITIALIZED = 3,
    DIGITOR_RESULT_BACKEND_UNAVAILABLE = 4,
    DIGITOR_RESULT_UNSUPPORTED = 5,
    DIGITOR_RESULT_RESOURCE_IN_USE = 6,
    DIGITOR_RESULT_OUT_OF_MEMORY = 7,
    DIGITOR_RESULT_INTERNAL_ERROR = 100
} DigitorResult;
typedef struct DigitorEngineConfig {
    DigitorRendererBackend preferred_backend;
    uint8_t enable_validation;
    uint8_t allow_cpu_fallback;
} DigitorEngineConfig;
typedef struct DigitorRendererInfo {
    DigitorRendererBackend backend;
    char backend_name[64];
    char device_name[128];
    uint8_t is_gpu;
    uint8_t supports_compute;
    uint8_t supports_fp16;
    uint8_t supports_fp32;
} DigitorRendererInfo;
typedef struct DigitorSdkSession DigitorSdkSession;
typedef struct DigitorColorControls { float exposure; float contrast; float saturation; } DigitorColorControls;
/* Legacy CPU preview view. Despite its historical name this is not a GPU
 * texture. New integrations should use DigitorNativeGpuTextureDescriptor. */
typedef struct DigitorNativeTexture { const void* pixels; uint32_t width; uint32_t height; uint32_t row_bytes; uint64_t generation; } DigitorNativeTexture;
typedef enum DigitorPreviewMode {
    DIGITOR_PREVIEW_MODE_CPU_COMPATIBILITY = 0,
    DIGITOR_PREVIEW_MODE_NATIVE_GPU_STRICT = 1
} DigitorPreviewMode;
typedef struct DigitorNativePreviewCapabilities {
    uint32_t struct_size;
    uint32_t api_version;
    uint8_t native_gpu_preview_available;
    uint8_t true_shared_resource_zero_copy;
    uint8_t gpu_to_gpu_copy;
    uint8_t cpu_fallback_only;
    uint8_t sdr_supported;
    uint8_t hdr_supported;
    uint8_t protected_content_supported;
    uint8_t resize_supported;
    DigitorNativeTextureBackend backend;
    DigitorNativeTextureHandleType handle_type;
    uint64_t supported_pixel_formats;
    DigitorPreviewMode selected_mode;
    char reason_unavailable[192];
} DigitorNativePreviewCapabilities;
typedef void (*DigitorAsyncCallback)(DigitorResult result, void* user_data);
typedef void (*DigitorExportProgressCallback)(double fraction, int64_t completed, int64_t total, void* user_data);
DIGITOR_API const char* digitor_get_version(void);
DIGITOR_API DigitorResult digitor_initialize(
    const DigitorEngineConfig* config
);
DIGITOR_API DigitorResult digitor_shutdown(void);
DIGITOR_API DigitorResult digitor_get_renderer_info(
    DigitorRendererInfo* out_info
);
/* Flutter-safe asynchronous SDK. Callbacks run on a worker thread; clients
 * marshal them to their UI isolate. The texture remains valid until the next
 * preview request or session destruction. */
DIGITOR_API DigitorResult digitor_sdk_create(DigitorSdkSession** out_session);
DIGITOR_API DigitorResult digitor_sdk_destroy(DigitorSdkSession* session);
DIGITOR_API DigitorResult digitor_sdk_set_color(DigitorSdkSession* session, DigitorColorControls controls);
DIGITOR_API DigitorResult digitor_sdk_preview_async(DigitorSdkSession* session, int64_t frame, uint32_t width, uint32_t height, DigitorAsyncCallback callback, void* user_data);
DIGITOR_API DigitorResult digitor_sdk_seek_async(DigitorSdkSession* session, int64_t frame, DigitorAsyncCallback callback, void* user_data);
DIGITOR_API DigitorResult digitor_sdk_get_native_texture(DigitorSdkSession* session, DigitorNativeTexture* out_texture);
DIGITOR_API DigitorResult digitor_sdk_set_preview_mode(DigitorSdkSession* session, DigitorPreviewMode mode);
DIGITOR_API DigitorResult digitor_sdk_query_native_preview(DigitorSdkSession* session, DigitorNativePreviewCapabilities* out_capabilities);
DIGITOR_API DigitorResult digitor_sdk_export_async(DigitorSdkSession* session, const char* path, int32_t format, int32_t codec, int64_t first, int64_t last, uint32_t width, uint32_t height, DigitorExportProgressCallback progress, DigitorAsyncCallback completion, void* user_data);
DIGITOR_API DigitorResult digitor_sdk_cancel(DigitorSdkSession* session);